--- a/backend/views/user/home.ejs
+++ b/backend/views/user/home.ejs
@@ -273,11 +273,9 @@
         </a>
       </div><!-- /.logo -->
 
-      <a href="#" class="header-tools__item header-tools__cart js-open-aside" data-aside="cartDrawer">
-        <svg class="d-block" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <use href="#icon_cart" />
-        </svg>
-      <span class="cart-amount d-block position-absolute js-cart-items-count">
+      <a href="/cart" class="header-tools__item header-tools__cart " >
+        <svg class="d-block" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><use href="#icon_cart" /></svg>
+           <span class="cart-amount d-block position-absolute js-cart-items-count">
             <%= cartItems.length > 0 ? cartItems.reduce((total, item) => total + item.quantity, 0) : 0 %>
           </span>
       </a>
