--- a/backend/views/user/product-details.ejs
+++ b/backend/views/user/product-details.ejs
@@ -824,7 +824,7 @@
                         <div style="font-size:1.05rem; color:#434343; font-weight:600;">
                             Free Exchange/Return of products within <span style="color:#434343;font-weight:700;">7
                                 days</span> of delivery.<br>
-                            <span style="font-size:0.97rem; color:#434343; font-weight:400;">Refer to <a href="/terms"
+                            <span style="font-size:0.97rem; color:#434343; font-weight:400;">Refer to <a href="/terms_and_conditions"
                                     style="color:#000000;text-decoration:underline;">Terms & Conditions</a> for more
                                 details.</span>
                             <div style="font-size:0.93rem; color:#434343; font-weight:500; margin-top:2px;">
